    - Added a shortcut for toggling one-way rails
    - Added a shortcut for toggling building signals while building rails
    - Right click on the menu button now puts Rail signal planner item in your cursor
  Gui:
    - If there are no more buttons in the top left menu when removing the rsp menu button then the bar is removed
    - Menu button now uses the same style as GUI Unifyer mod
  Bugfixes:
    - Fixed the menu closing when switching rail type
    - Fixed pressing Z when cursor was outside of reach distance not clearing the planner
    - Fixed error when trying to remove the menu button through settings
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2023-01-31
  Gui:
    - Added a close button
    - Updated the settings interface to look better on smaller screens
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2023-01-31
  Major Features:
    - Allows signals to be placed when building rails
    - Added cargo ships compatibility
  Features:
    - Added option to disallow rails to be built if the rail direction is conflicting
    - Added option to only allow unidirectional rails
    - Added option to remove construction job for signals (right click + drag) and order to deconstruct all signals (shift + right click + drag)
  Changes:
    - Automatically check for rails outside of the selection if they should be included in the calculation
  Gui:
    - Moved the settings GUI from center to left menu
    - Added a mod gui button. Settings menu can now be option by this button and by right click on the planner. Can be removed in mod options
    - Added settings per rail planner. (So different settings possible for normal rails, cargo ships, space rails, etc.)
    - Use the elem_filters of the gui to allow players to only pick rail-signal/rail-chain-signal entities
  Graphics: