@@ -36,12 +36,15 @@ local function change_signal_on_long_stretches(player)
   -- on long stretches we don't place any signal if the distance between previous is too small (setting)
   -- or if the rail is bidirectional
   local original_signals_to_check = {}
+  local entrances_to_check = {}
   local other_signals_to_check = {}
   for _, signal in pairs(Signal.all_signals) do
     if signal.current_signal then
       if signal.original_signal then
         table.insert(original_signals_to_check, signal)
-      else
+      elseif signal.is_entrance then
+        table.insert(entrances_to_check, signal)
+      elseif signal.current_signal then
         table.insert(other_signals_to_check, signal)
       end
     end
@@ -50,6 +53,11 @@ local function change_signal_on_long_stretches(player)
   for _, signal in pairs(original_signals_to_check) do
     signal:clean_up_long_stretch("front")
     signal:clean_up_long_stretch("back")
+  end
+  for _, signal in pairs(entrances_to_check) do
+    for _, back_signal in pairs(signal.signals_back) do
+      back_signal:clean_up_long_stretch("back", back_signal.rail_signal_distance - back_signal.length)
+    end
   end
   for _, signal in pairs(other_signals_to_check) do
     if not signal.visited_clean_up_long["front"] and not signal.visited_clean_up_long["back"] then
